# topic

c-proto-buffer/: README.txt
c-zero-mq/: CMake.txt  README.txt  main.cpp
cmake/: CMakeLists.txt  readme.txt
cmake/modules/: FindAwsS3.cmake  FindMac.cmake  FindRocks.cmake
flink/: README.txt  kubernetes_flink_setup.yaml
flink/flink_lyft/: config.yaml  flinkk8soperator.yaml  setup.sh
go-do-not-depend-on-service-you-are-calling/: README.txt  main.go
go-do-not-depend-on-service-you-are-calling/core_client/: client.go
go-do-not-depend-on-service-you-are-calling/core_service/: core_api.go
go-http-client-with-timeout/: code.go
go-http-get-and-pojo/: code.go
go-http-mocking/: code.go
go-hystrix/: code.go
go-instrumented-services/: README.txt  instrumented_client.go  service.go
go-yaml-parsing/: app.yml  code.go
helix/: README.md
junit-match-argument-via-lambda/: README.txt
kubernetes-networking/: source_file_how_kubernetes_calls_cni_plugin.puml
map-with-react/: app.js
nginx/: deploy.yaml  test.yml
point_on_map/: README.txt  index.html  main.js  setup.sh
scala/: pom_with_java_scala_proto.xml
tenserflow/: basic_loss_function.py  custom_layer_how.py  grad_using_gradient_tape.py  linear_classifier_plain.py
